# Multimodal-Diagnosis-Agent

./: README.md  brain.py  pyproject.toml  requirements.txt
backend/: main.py
backend/api/: routes.py
backend/models/: xray.py
backend/parsers/: blood.py
backend/services/: llm.py
frontend/: app.py
