[project]
name = "multimodal-diagnosis-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Aryan",email = "aryanbhardwaj3166@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torchxrayvision (>=1.3.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
